<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:titleTextColor="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat" />

    <TextView
        android:id="@+id/timeElapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:id="@+id/imageIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <ImageView
        android:id="@+id/morphResultImage"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:contentDescription="@string/morph_result_image"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/back"
            android:scaleType="fitCenter"
            android:contentDescription="@string/back_button" />

        <ImageButton
            android:id="@+id/playBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/play"
            android:scaleType="fitCenter"
            android:contentDescription="@string/play_button" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/next"
            android:scaleType="fitCenter"
            android:contentDescription="@string/next_button" />

    </LinearLayout>



</LinearLayout>